        interactive if it has a display list (but devices can still
        register themselves on the list of interactive devices).

    o   plot.formula() only prompts between plots for interactive
        devices (it used to prompt for all devices).

    o   New function browseVignettes() lists available vignettes in an
        HTML browser with links to PDF, Rnw, and R files.



DEPRECATED & DEFUNCT

    o	In package installation, SaveImage: yes is defunct and
	lazyloading is attempted instead.

    o	$ on an atomic vector or S4 object is now defunct.

    o	Partial matching in [[ is now only performed if explicitly
	requested (by exact=FALSE or exact=NA).

    o	Command-line completion has been moved from package 'rcompgen'
	to package 'utils': the former no longer exists as a separate
	package in the R distribution.

    o	The S4 pseudo-class "single" has been removed.
	["double" will follow shortly:  the S4 class for a REALSXP is
	"numeric".]


INSTALLATION

    o	Tcl/Tk >= 8.3 (released in 2000) is now required to build
	package tcltk.

    o	The Windows build only supports Windows 2000 or later (XP,
	Vista, Server 2003 and Server 2008).

    o	New option --enable-R-static-lib installs libR.a which can
	be linked to a front-end via 'R CMD config --ldflags'.


UTILITIES

    o	Rdconv now removes empty sections including alias and keyword
    	entries, with a note.

    o	Keyword entries are no longer mandatory in Rd files.

    o	R CMD check now warns if spaces or non-ASCII characters are
	used in file paths, since these are not in general portable.

    o   R CMD INSTALL now also installs tangled versions of all vignettes.


BUG FIXES

    o	pt(x, df) is now even more accurate in some cases (e.g. 12 instead
	of 8 significant digits), when x^2 << df, thanks to a remark from
	Ian Smith, related to PR#9945.

    o	co[rv](use = "complete.obs") now always gives an error if there
	are no complete cases: they used to give NA if