@@ -757,7 +757,7 @@ attribute_hidden FUNTAB R_FunTab[] = {
 /* Device Drivers */
 
 #ifdef Unix
-    {"X11", do_X11, 0, 111, 13, {PP_FUNCALL, PREC_FN, 0}},
+    {"X11", do_X11, 0, 111, 14, {PP_FUNCALL, PREC_FN, 0}},
 #endif
 
     /* Graphics */
